crates/compiler/cypress/tests/snapshots/test_parse__when_in_function_python_style_indent_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "func = \\x ->\n    when n is\n        0 -> 0\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginLambda
                Ident=>LowerIdent@3
                InlineLambdaArrow=>OpArrow@4
                (BeginBlock
                    HintExpr
                    (BeginWhen
                        Ident=>LowerIdent@6
                        InlineKwIs=>KwIs@7
                        Num=>Int@8
                        InlineWhenArrow=>OpArrow@9
                        Num=>Int@10
                    EndWhen)
                EndBlock)
            EndLambda)
        EndAssign)
        HintExpr
        Num=>Int@11
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("func"), Lambda([Ident("x")], Block([When(Ident("n"), [IntBase10("0"), IntBase10("0")])])))
IntBase10("42")

[=== formatted below ===]

