crates/compiler/cypress/tests/snapshots/test_parse__when_in_parens_indented_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "(when x is\n    Ok -> 3\n     )\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginParens
            (BeginWhen
                Ident=>LowerIdent@2
                InlineKwIs=>KwIs@3
                UpperIdent=>UpperIdent@4
                InlineWhenArrow=>OpArrow@5
                Num=>Int@6
            EndWhen)
        EndParens)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
When(Ident("x"), [UpperIdent("Ok"), IntBase10("3")])

[=== formatted below ===]

