crates/compiler/cypress/tests/snapshots/test_parse__when_with_function_application_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "when x is\n    1 ->\n        Num.neg\n            2\n\n    _ -> 4\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginWhen
            Ident=>LowerIdent@1
            InlineKwIs=>KwIs@2
            Num=>Int@3
            InlineWhenArrow=>OpArrow@4
            (BeginBlock
                (*
                    HintExpr
                    (* ModuleName=>UpperIdent@5 DotModuleLowerIdent)
                    InlineApply=>NoSpaceDotLowerIdent@6
                    Num=>Int@7
                EndApply)
            EndBlock)
            Underscore=>Underscore@8
            InlineWhenArrow=>OpArrow@9
            Num=>Int@10
        EndWhen)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
When(Ident("x"), [IntBase10("1"), Block([Apply(ModuleLowerName("Num", ".neg"), [IntBase10("2")])]), Underscore("_"), IntBase10("4")])

[=== formatted below ===]

